// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selection render should match snapshot for container 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-container lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        size={8}
      />
    </div>
    cont
  </div>
</div>
`;

exports[`Selection render should match snapshot for custom icons 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-default lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-Icon fake-icon"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        size={8}
      />
    </div>
    <Selection.Icon
      key=".0"
    >
      <div
        className="fake-icon"
      />
    </Selection.Icon>
  </div>
</div>
`;

exports[`Selection render should match snapshot for danger 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-danger lucid-Selection-no-title"
>
  <MinusCircleIcon
    className="lucid-Selection-Icon lucid-Selection-Icon-is-large"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        size={8}
      />
    </div>
    cont
  </div>
</div>
`;

exports[`Selection render should match snapshot for info 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-info lucid-Selection-no-title"
>
  <InfoIcon
    className="lucid-Selection-Icon lucid-Selection-Icon-is-large"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        size={8}
      />
    </div>
    cont
  </div>
</div>
`;

exports[`Selection render should match snapshot for nested selections 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-default lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        size={8}
      />
    </div>
    <div
      className="lucid-Selection-children-container"
    >
      <Selection
        hasBackground={false}
        isBold={false}
        isRemovable={true}
        key="[object Object]0"
        kind="default"
        onRemove={[Function]}
        responsiveMode="large"
      >
        There
      </Selection>
    </div>
    Hello
  </div>
</div>
`;

exports[`Selection render should match snapshot for non removable 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-default lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
    </div>
  </div>
</div>
`;

exports[`Selection render should match snapshot for responsiveMode small 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-small lucid-Selection-default lucid-Selection-no-title"
>
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label lucid-Selection-label-is-small"
      />
      <CloseIcon
        className="lucid-Selection-close-button lucid-Selection-close-button-is-small"
        isClickable={true}
        onClick={[Function]}
        size={16}
      />
    </div>
    Yolo
  </div>
</div>
`;

exports[`Selection render should match snapshot for success 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-success lucid-Selection-no-title"
>
  <SuccessIcon
    className="lucid-Selection-Icon lucid-Selection-Icon-is-large"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        size={8}
      />
    </div>
    cont
  </div>
</div>
`;

exports[`Selection render should match snapshot for warning 1`] = `
<div
  className="lucid-Selection lucid-Selection-is-large lucid-Selection-warning lucid-Selection-no-title"
>
  <WarningIcon
    className="lucid-Selection-Icon lucid-Selection-Icon-is-large"
  />
  <div
    className="lucid-Selection-content"
  >
    <div
      className="lucid-Selection-label-container"
    >
      <span
        className="lucid-Selection-label"
      />
      <CloseIcon
        className="lucid-Selection-close-button"
        isClickable={true}
        onClick={[Function]}
        size={8}
      />
    </div>
    cont
  </div>
</div>
`;
